# indoor_geometry_reconstruction

./: .gitignore  Buffer.cpp  Buffer.h  Buffers.h  CMakeLists.txt  DepthMap.cpp  Directory_Processing.cpp  Directory_Processing.h  FilterSegmentsByTime.cpp  GenerateWallPatches.cpp  Laserpoint2ScanningPosition.cpp  Laservoxel.cpp  Laservoxel.h  MLS_preprocessing.cpp  MergeSurfaces.cpp  PlaneFittingResidual.cpp  PlaneFittingResidual.h  ReadAscii.cpp  TrajectoryManipulation.cpp  TrajectoryManipulation.h  WallAccuracy.cpp  indoorTopology.cpp  indoorTopology_v1_old.cpp  indoor_reconstruction.h  main.cpp  occlusion_test.cpp  occlusion_test2.cpp  post_processing.cpp  post_processing.h  readme  segment_refinement.cpp  setConsoleColor.cpp  space_partitioning.cpp  space_partitioning.h  test_functions.cpp
Debug/: indoor_reconstruction.bat  indoor_reconstruction_batch.bat
